# playwright-mcp-oidc

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/playwright_mcp_oidc/: auth.py  config.py  server.py
