[project]
name = "playwright-mcp-oidc"
version = "0.1.0"
description = "OIDC-protected proxy in front of mcr.microsoft.com/playwright/mcp"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.5",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.6",
    "starlette>=0.40",
]

[dependency-groups]
dev = [
    "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/playwright_mcp_oidc"]

[tool.ruff]
target-version = "py312"
